# rocket_summer_25

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  eval $(ssh-agent -s)  eval $(ssh-agent -s).pub  make.sh  module.py  pb.app.py  requirements.txt
.cache/clangd/index/: FreeRTOS.h.3F842EAFA1587FFF.idx  FreeRTOSConfig.h.D623EF9564546E8D.idx  acceleration.c.36ACE79A192C81A1.idx  acceleration.h.6DFE912F48ED68E1.idx  ads111x.c.5AED50AD5BCDBF4E.idx  ads111x.h.2B0BE3C667A4BE4E.idx  ads111x_defs.h.E2F3B6090E088981.idx  alloc.h.A5E2EB14CFEA889F.idx  alloc_test.cc.D9CD84806513E555.idx  altitude.c.8A27C4FF29CDDFCF.idx  altitude.h.9189198FEA8007DC.idx  blink.c.84D47EFCC585E0A2.idx  blink.h.7CFFEDAA977C256C.idx  cli.c.8F3BD2B4A0A61CA8.idx  (+283 more)
.github/workflows/: ci-actions.yml
app/: CMakeLists.txt
app/dcm_app/: CMakeLists.txt  main.c
app/enc_app/: interrupts.c  main.c
app/flight_computer_subscale/: CMakeLists.txt  interrupts.c  main.c
app/lbr_dcm_app/: CMakeLists.txt  main.c
app/logging/: main.c
app/pwm_app/: CMakeLists.txt  main.c
app/servo_app/: CMakeLists.txt  interrupts.c  main.c
app/sim/: CMakeLists.txt  main.c
app/subscale/: main.c  main_rayne.c
app/uart_network_test/: CMakeLists.txt  interrupts.c  main.c
app/usart_hw_test/: main.c
cmake/: build-util.cmake
common/core/: CMakeLists.txt
common/core/cli/: send.c  send.h
common/core/comms/: CMakeLists.txt  cmd_message.h  lbr_net.c  lbr_net.h  lbr_net_test.cc  nano_pb_test.cc  network_interface.h  pb_cmd.h  pb_cmd_message.c
common/core/container/: CMakeLists.txt  ring_buffer.c  ring_buffer.h  ring_buffer_test.cc
common/core/error/: CMakeLists.txt  exit.h
common/core/gnc/: CMakeLists.txt  acceleration.c  acceleration.h  altitude.c  altitude.h  gnc_constants.h  nav_data.h  navigator.h  simple_kalman.c  simple_kalman.h
common/core/math/: CMakeLists.txt  math_util.h  matrix.c  matrix.h  quaternion.c  quaternion.h  quaternion_test.cc
common/core/memory/: CMakeLists.txt  alloc.h  alloc_test.cc  dalloc.c  dalloc.h  prealloc.c  prealloc.h
common/core/motor_control/: pid.c  pid.h
common/core/motors/: CMakeLists.txt  dcm_control_test.cc  drv8242_dcm_test.cc  drv8242_enc_test.cc
common/core/motors/DC/: dcm.h  fake_dcm.c  fake_dcm.h  nidec_dcm.c  nidec_dcm.h  st_dcm.c  st_dcm.h
common/core/motors/SERVO/: ds_servo.c  ds_servo.h  servo.h
common/core/motors/encoder/: drv8242_enc.c  drv8242_enc.h  fake_enc.c  fake_enc.h  qenc.h  st_enc.c  st_enc.h
common/core/motors/motor_control/: dcm_control.c  dcm_control.h  fake_dcm_control.c  fake_dcm_control.h
common/core/periph/chip_select/: gpio_cs.c  gpio_cs.h
common/core/periph/rs485/: snx5176b.c  snx5176b.h
common/core/periph/w25q/: w25q.c
common/core/proto/: CMakeLists.txt
common/core/switches/: CMakeLists.txt  count_debounce.c  count_debounce.h  count_debounce_test.cc  io_input.h
common/core/timeout/: retry_timer_test.cc
common/driver/: CMakeLists.txt  README.md
common/driver/platform/stm32l4/: CMakeLists.txt  st_enc.c  st_enc.h  st_gpio_fctry.c  st_gpio_fctry.h  st_i2c.h  st_i2c_fctry.c  st_i2c_fctry.h  st_pwm.c  st_pwm.h  st_spi.c  st_spi.h  st_spi_fctry.c  st_spi_fctry.h  st_usart.c  st_usart.h  st_usart_fctry.h
tools/data/: display_kalman_sim.py  log_splitter.py
tools/python_cli/: cli.py  py_lbr_net.py  serializer.py
(+98 files in other folders)
